--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Docker CI
 
 on:
   push:
@@ -9,11 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -21,8 +18,8 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and Push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        push: true
-        tags: <your-dockerhub-username>/devops-docker-cicd:latest
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-docker-cicd:latest .
+
+    - name: Push Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/devops-docker-cicd:latest
